--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "pages/api/auth/...nextauth",
+    "pages/api/auth/[...nextauth]"
   ],
   "exclude": ["node_modules"]
 }
