--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "express": "^4.18.2",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.9.0",
     "next": "13.4.7",
